Added css and js scripts for project and created functions

--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="main.css">
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- CSS Dosyaları -->
+    <link rel="stylesheet" href="preview.css">
+    <link rel="stylesheet" href="batteryview.css" id="batteryview-css" disabled>
+    <link rel="stylesheet" href="mapview.css" id="mapview-css" disabled>
 </head>
 <body>
     <header class="header">
@@ -46,6 +50,10 @@
         <div id="preview" class="container">This is the Preview container.</div>
         <div id="battery-view" class="container">This is the Battery View container.</div>
     </main>
+    <!-- JavaScript Dosyaları -->
     <script src="main.js"></script>
+    <script src="preview.js" id="preview-js"></script>
+    <script src="batteryview.js" id="batteryview-js" defer></script>
+    <script src="mapview.js" id="mapview-js" defer></script>
 </body>
 </html>
