Added js functions for battery view

--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
     <main class="content">
         <div id="map-view" class="container">This is the Map View container.</div>
         <div id="preview" class="container">This is the Preview container.</div>
-        <div id="battery-view" class="container">This is the Battery View container.</div>
+        <div id="battery-view" class="container"></div>
     </main>
     <!-- JavaScript Dosyaları -->
     <script src="main.js"></script>
