Changed style for preview container

--- a/main.html
+++ b/main.html
@@ -54,28 +54,26 @@
         <div id="map-view" class="container">This is the Map View container.</div>
         <div id="preview" class="container active">
             <div class="widget-grid">
-                <div class="widget">
+                <div class="widget widget-total">
                     <h3>Toplam Batarya Sayısı</h3>
                     <p>16</p>
                 </div>
-                <div class="widget">
+                <div class="widget widget-working">
                     <h3>Çalışan Batarya Sayısı</h3>
                     <p>15</p>
                 </div>
-                <div class="widget">
+                <div class="widget widget-broken">
                     <h3>Bozuk Batarya Sayısı</h3>
                     <p>1</p>
                 </div>
                 <div class="widget">
-                    <h3>Batarya Durumu</h3>
-                    <canvas id="batteryPieChart"></canvas>
+                    <h3>Batarya Durumu</h3> <canvas id="batteryPieChart"></canvas>
                 </div>
                 <div class="widget widget-wide">
                     <h3>Bildirimler</h3>
                     <ul id="notificationList">
                         <li>Batarya 1'de voltaj düşüklüğü tespit edildi.</li>
-                        <li>Batarya 5'in sıcaklık değeri normalden yüksek.</li>
-                        <!-- Diğer bildirimler burada olacak -->
+                        <li>Batarya 5'in sıcaklık değeri normalden yüksek.</li> <!-- Diğer bildirimler burada olacak -->
                     </ul>
                 </div>
             </div>
