--- a/main.html
+++ b/main.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="mapview.css" id="mapview-css" disabled>
     <!-- ApexCharts CDN -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <!-- Leaflet CSS ve JS dosyalarını ekleyin -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </head>
 
 <body>
@@ -44,16 +47,15 @@
         <hr>
         <div class="system-title">AKÜ İZLEME SİSTEMİ</div>
         <ul>
-            <li><a href="#" onclick="showContainer('preview')"><i class="fas fa-eye icon"></i><span>Önizleme</span></a>
-            </li>
-            <li><a href="#" onclick="showContainer('map-view')"><i class="fas fa-map-marker-alt icon"></i><span>Harita
-                        Görünümü</span></a></li>
-            <li><a href="#" onclick="showContainer('battery-view')"><i class="fas fa-battery-full icon"></i><span>Akü
-                        Görüntüleme</span></a></li>
+            <li><a href="#" onclick="showContainer('preview')"><i class="fas fa-eye icon"></i><span>Önizleme</span></a></li>
+            <li><a href="#" onclick="showContainer('map-view')"><i class="fas fa-map-marker-alt icon"></i><span>Harita Görünümü</span></a></li>
+            <li><a href="#" onclick="showContainer('battery-view')"><i class="fas fa-battery-full icon"></i><span>Akü Görüntüleme</span></a></li>
         </ul>
     </aside>
     <main class="content">
-        <div id="map-view" class="container">This is the Map View container.</div>
+        <div id="map-view" class="container">
+            <div id="map" style="width: 100%; height: 100%;"></div> <!-- Leaflet haritası için div -->
+        </div>
         <div id="preview" class="container active">
             <div class="widget-grid">
                 <div class="widget widget-total">
@@ -70,7 +72,7 @@
                 </div>
                 <div class="widget">
                     <h3>Batarya Durumu</h3>
-                    <div id="batteryApexChart"></div> <!-- Canvas yerine div kullanacağız -->
+                    <div id="batteryApexChart"></div>
                 </div>
                 <div class="widget widget-wide">
                     <h3>Bildirimler</h3>
