--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUTEM - Login</title>
+    <title>NUVO - Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
 
@@ -13,9 +13,9 @@
         <div class="background-image"></div>
         <div class="login-form">
             <div class="logo">
-                <img src="icon/hidranetlogo.png" alt="HİDRANET Logo">
-                <h2>HİDRANET</h2>
-                <p>Sulama Tesisleri Yönetim Sistemi</p>
+                <img src="icon/logonuvo.png" alt="NUVO Logo">
+                <h2>NUVO Akü izleme Sistemi</h2>
+                <p></p>
             </div>
             <form>
                 <label for="username">Kullanıcı Adı:</label>
