Uptaded battery system and added mqtt function

--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@
     <script src="preview.js" id="preview-js"></script>
     <script src="batteryview.js" id="batteryview-js" defer disabled></script>
     <script src="mapview.js" id="mapview-js" defer disabled></script>
-    <script>
+    <!-- <script>
         let globalJsonMessage; // Global değişken
     
         const BROKER = "81.214.12.250";
@@ -125,7 +125,7 @@
                 console.log("Failed to parse message to JSON: " + e.message);
             }
         };
-    </script>
+    </script> -->
     
 </body>
 
