Added battery numbers

--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
     </aside>
     <main class="content">
         <div id="map-view" class="container">
-            <div id="map" style="width: 100%; height: 100%;"></div> <!-- Leaflet haritası için div -->
+            <div id="map" style="width: 100%; height: 100%;"></div> 
         </div>
         <div id="preview" class="container active">
             <div class="widget-grid">
@@ -63,11 +63,11 @@
                 </div>
                 <div class="widget widget-working">
                     <h3>Çalışan Batarya Sayısı</h3>
-                    <p>15</p>
+                    <p>16</p>
                 </div>
                 <div class="widget widget-broken">
                     <h3>Bozuk Batarya Sayısı</h3>
-                    <p>1</p>
+                    <p>0</p>
                 </div>
                 <div class="widget">
                     <h3>Batarya Durumu</h3>
@@ -76,8 +76,7 @@
                 <div class="widget widget-wide">
                     <h3>Bildirimler</h3>
                     <ul id="notificationList">
-                        <li>Batarya 1'de voltaj düşüklüğü tespit edildi.</li>
-                        <li>Batarya 5'in sıcaklık değeri normalden yüksek.</li> <!-- Diğer bildirimler burada olacak -->
+                        <li>Batarya 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16 sıcaklık sensörü bulunamadı</li>
                     </ul>
                 </div>
             </div>
